resolved overflow-x in html

--- a/assets/css/barbased.css
+++ b/assets/css/barbased.css
@@ -56,6 +56,9 @@ nav {
 
 
 @media screen and (max-width: 760px){
+  html{
+    overflow-x: hidden;
+  }
   body{
     overflow-x:hidden;
   }
